# yt-text-extractor

./: .gitignore  Makefile  pyproject.toml  yt-text-extractor.py
